@@ -26,7 +26,7 @@
     "grunt-contrib-imagemin": "~0.1.4",
     "grunt-contrib-watch": "~0.4.0",
     "grunt-cli": "~0.1.13",
-    "grunt-ngmin": "~0.0.2",
+    "grunt-ng-annotate": "~0.8.0",
     "grunt-usemin": "~0.1.11",
     "grunt-rev": "~0.1.0",
     "grunt-open": "~0.2.0",
